--- a/public/reports/Imoveis.jrxml
+++ b/public/reports/Imoveis.jrxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.3.1.final using JasperReports Library version 6.3.1  -->
-<!-- 2017-04-04T09:07:11 -->
+<!-- 2017-04-06T16:12:22 -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Imoveis" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="992dff5c-f8ad-4866-ac68-7694af1a5e3f">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Imoveis.xml"/>
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
@@ -14,8 +14,9 @@
 	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
 	<queryString>
-		<![CDATA[SELECT nomeEdificio, numeroAptCasa, endereco, foneProprietario, emailProprietario, quemIndicou FROM imoveis]]>
+		<![CDATA[SELECT bairro, nomeEdificio, numeroAptCasa, endereco, foneProprietario, emailProprietario, quemIndicou FROM cadastro_imoveis ORDER BY bairro ASC]]>
 	</queryString>
+	<field name="bairro" class="java.lang.String"/>
 	<field name="nomeEdificio" class="java.lang.String"/>
 	<field name="numeroAptCasa" class="java.lang.String"/>
 	<field name="endereco" class="java.lang.String"/>
@@ -56,7 +57,7 @@
 		</band>
 	</title>
 	<detail>
-		<band height="185" splitType="Stretch">
+		<band height="196" splitType="Stretch">
 			<textField>
 				<reportElement x="0" y="33" width="205" height="30" uuid="7479b6db-9b70-4e04-81cc-784492f03f43"/>
 				<box topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
@@ -72,7 +73,7 @@
 				<textFieldExpression><![CDATA[$F{nomeEdificio}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="490" y="93" width="65" height="55" uuid="4ac0bcef-db5c-4b63-8c0e-f8e16c5eaa72"/>
+				<reportElement x="170" y="93" width="384" height="55" uuid="24a4320d-dcb3-434d-8f38-f7f05130adf6"/>
 				<box>
 					<pen lineWidth="1.0" lineColor="#3A969F"/>
 					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
@@ -83,21 +84,7 @@
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{numeroAptCasa}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="170" y="93" width="320" height="55" uuid="24a4320d-dcb3-434d-8f38-f7f05130adf6"/>
-				<box>
-					<pen lineWidth="1.0" lineColor="#3A969F"/>
-					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#3A969F"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#3A969F"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#3A969F"/>
-				</box>
-				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="12"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{endereco}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{endereco} + ", N " + $F{numeroAptCasa} + ", Bairro: " + $F{bairro}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="205" y="33" width="150" height="30" uuid="37104240-80ed-4004-b6e0-884cb3648bdd"/>
